--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "bootstrap": "^4.5.3",
     "infinite-react-carousel": "^1.2.11",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
