--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "atividade-sw",
+  "name": "trabalho-final",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -12,7 +13,8 @@
     "firebase": "^8.1.1",
     "infinite-react-carousel": "^1.2.11",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.4.0",
+    "react-chatbot-kit": "^1.1.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
